# Buchhaltung

./: .gitignore  Bearbeitungsverlauf-Ebay.xlsx  README.md  api_data_20251207_193044.xlsx  api_data_20251207_193756.xlsx  config.py  pyproject.toml  render.yaml  requirements.txt  run.py  setup.bat  setup.sh  start.bat  start.sh
instance/: buchhaltung.db
output/: .gitkeep
src/: __init__.py
src/api/: __init__.py  client.py
src/processors/: __init__.py  data_analyzer.py  data_matcher.py  excel_processor.py
src/ui/: __init__.py  app.py  auth.py  models.py
src/ui/static/css/: style.css
src/ui/static/js/: main.js
src/ui/templates/: analytics.html  base.html  fetch_data.html  help.html  index.html  login.html  process.html  process_data.html
src/utils/: __init__.py  helpers.py
